--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sutcliffe Polygons Website</title>
+    <style>
+        body { text-align: center; font-family: Arial, Helvetica, sans-serif; }
+        canvas { border: 1px solid black; margin-top: 10px; }
+    </style>
 </head>
 <body>
     <h1>Sutcliffe Polygons</h1>
+    <button onclick = "toggleAnimation()">Pause/Resume</button>
+    <button onclick = "downloadImage()">Download Image</button>
+    <canvas id = "canvas"></canvas>
+    <script src = "script.js"></script>
 </body>
 </html>
