--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <h1>Sutcliffe Polygons</h1>
     <button onclick = "toggleAnimation()">Pause/Resume</button>
     <button onclick = "downloadImage()">Download Image</button>
+    <input type = "number" min = "3" max = "45" value = "5" oninput = "updateSides()" id = "numSidesInput">
     <div class = "slidecontainer">
-        <input type = "range" min = "1" max = "7" value = "1" class = "slider" id = "depthSlider">
+        <input type = "range" min = "1" max = "6" value = "1" class = "slider" id = "depthSlider">
         <p>Depth: <span id = "depthValueDisplay"></span></p>
     </div>
     <canvas id = "canvas"></canvas>
