--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <input type = "range" min = "1" max = "6" value = "1" class = "slider" id = "depthSlider">
         <p>Depth: <span id = "depthValueDisplay"></span></p>
     </div>
+    <div class = "slidecontainer">
+        <input type = "range" min = "-1000" max = "1000" value = "0" class = "slider" id = "strutChangeSlider">
+        <p>Change Factor: <span id = "strutChangeDisplay"></span></p>
+    </div>
     <canvas id = "canvas"></canvas>
     <script src = "script.js"></script>
     <script src = "buttons.js"></script>
