--- a/index.html
+++ b/index.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sutcliffe Polygons Website</title>
-    <style>
-        body { text-align: center; font-family: Arial, Helvetica, sans-serif; }
-        canvas { border: 1px solid black; margin-top: 10px; }
-    </style>
-</head>
-<body>
-    <h1>Sutcliffe Polygons</h1>
-    <button onclick = "toggleAnimation()">Pause/Resume</button>
-    <button onclick = "downloadImage()">Download Image</button>
-    <input type = "number" min = "3" max = "45" value = "5" oninput = "updateSides()" id = "numSidesInput">
-    <div class = "slidecontainer">
-        <input type = "range" min = "1" max = "6" value = "1" class = "slider" id = "depthSlider">
-        <p>Depth: <span id = "depthValueDisplay"></span></p>
-    </div>
-    <div class = "slidecontainer">
-        <input type = "range" min = "-1000" max = "1000" value = "0" class = "slider" id = "strutChangeSlider">
-        <p>Change Factor: <span id = "strutChangeDisplay"></span></p>
-    </div>
-    <canvas id = "canvas"></canvas>
-    <script src = "script.js"></script>
-    <script src = "buttons.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sutcliffe Polygons</title>
+        <link href="css/style.css" rel="stylesheet">
+        <style>
+            canvas {
+                border: 1px solid black; 
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>Sutcliffe Polygons</h1>
+        </header>
+        <!--
+        <p> 
+            The first place I saw Sutcliffe Pentagons
+            was in the book <a href="https://books.google.co.uk/books/about/Generative_Art.html?id=D9ChSgAACAAJ&redir_esc=y">Genaritve art</a>
+            by Matt Pearson
+        </p>
+        -->
+        <main>
+            <button onclick = "toggleAnimation()">Pause/Resume</button>
+            <button onclick = "downloadImage()">Download Image</button>
+            <input type = "number" min = "3" max = "45" value = "5" oninput = "updateSides()" id = "numSidesInput">
+            <div class = "slidecontainer">
+                <input type = "range" min = "1" max = "6" value = "1" class = "slider" id = "depthSlider">
+                <p>Depth: <span id = "depthValueDisplay"></span></p>
+            </div>
+            <div class = "slidecontainer">
+                <input type = "range" min = "-1000" max = "1000" value = "0" class = "slider" id = "strutChangeSlider">
+                <p>Change Factor: <span id = "strutChangeDisplay"></span></p>
+            </div>
+            <canvas id = "canvas"></canvas>
+            <script src = "script.js"></script>
+            <script src = "buttons.js"></script>
+        </main>
+        <footer>
+            <p>Copyright</p>
+        </footer>
+    </body>
 </html>
